<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mirea Project</string>
    <string name="nav_header_subtitle">android.studio@mirea.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_data">Data</string>
    <string name="menu_webview">Web</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_greeting">Let\'s learn Chinese together!</string>

    <string name="data_theme">Chinese Sentence Structure</string>
    <string name="data_header_basic_structure">Basic Chinese Sentence Structure</string>
    <string name="data_basic_structure">
    A basic and common Chinese sentence structure is in three parts: Subject (S) + Verb (V) + Object (O).
\n
    Example: He plays ball.
\n
    \tHe, 他 tā (This is the subject.)
\n
    \tPlay, 打 dǎ(This is the verb.)
\n
    \tBall, 球 qiú (This is the object.)
\n
    So the correct order will be,
\n
    他 (S) + 打 (V) + 球(O)。 Tā dǎ qiú.
\n
    He plays ball.

    </string>

    <string name="data_header_time">“Time” in Chinese sentence structure</string>
    <string name="data_time">
    “Time when” will go either right before the subject or right after the subject. So, the sentence structure will become:
\n
    Subject + Time when + Verb + Object
\n
    \tor
\n
    Time when + Subject +  Verb + Object
\n
    Let’s use the same example from above:
\n
    He plays ball at 4 this afternoon.
\n
    4 o’clock this afternoon is the “time when.” It can be placed either right before, or right after, the subject.
\n
    To apply the sentence structure Subject + Time when + Verb + Object, the order will be:
\n
    He + today afternoon 4 o’clock + plays + ball.
\n
    他今天 下午 四点 打球。
\n
    Tā jīntiān xiàwǔ sì diǎn dǎ qiú.

    </string>

    <string name="data_header_location">“Location” in Chinese sentence structure</string>
    <string name="data_location">
    Location is another important piece of information when making an appointment. If you need to add “location,” you should place it after the subject and time. The structure will look like this,
\n
    Subject + Time when + Location + Verb + Object
\n
    If the location contains a smaller area in a location, it’s the same idea as time, bigger location first and then smaller.
\n
    Example,
]n
    He plays ball at the gym, in the school, at 4 this afternoon.
\n
    Let’s take a close look at the location information here. There are two location words:
\n
    \tGym
    \tSchool
    \tLet’s arrange them in the correct order in Chinese grammar:

    \tSchool (a bigger location) and
    \tGym (a smaller location which is inside the school)
    \tSchool: 学校 xuéxiào
\n
    \tGym: 运动场 tyùndòngchǎng
\n
    So, the correct order in Chinese will be:
\n
    He + today afternoon 4 o’clock + in the school at the gym + play + ball.
\n
    他今天下午四点 在学校 运动场 打球。
\n
    Tā jīntiān xiàwǔ sì diǎn zài xuéxiào yùndòngchǎng dǎ qiú.

    </string>



    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate
with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified:
%2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for de-
tails.</string>
    <string name="password">password</string>
    <string name="email">Email</string>


</resources>